--- a/src/components/AppTodoList/AppTodoList.css
+++ b/src/components/AppTodoList/AppTodoList.css
@@ -1,17 +1,67 @@
 .todo-list {
-    width: 100%;
+  width: 100%;
 }
 
 .list {
-    width: 100%;
-    list-style: none;
-    margin: 5px 0;
+  width: 100%;
+  list-style: none;
+  margin: 5px 0;
 }
 
 .list-item {
-    width: 100%;
-    border-radius: 3px;
-    border: 1px solid #eee;
-    padding: 10px;
-    margin-bottom: 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  border-radius: 3px;
+  border: 1px solid #eee;
+  padding: 10px;
+  margin-bottom: 5px;
+}
+
+.item-label {
+  cursor: pointer;
+}
+
+.list-fa {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.list-fa-item {
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 35px;
+  height: 35px;
+  list-style: none;
+  transition: background-color 0.2s linear, border 0.2s linear;
+}
+
+.list-fa-item.trash {
+  border-radius: 3px 0 0 3px;
+  border: 2px solid rgb(253, 177, 177);
+  border-right: none;
+  background-color: rgb(253, 177, 177);
+}
+
+.list-fa-item.trash:hover {
+  background-color: rgb(255, 221, 221);
+  border: 2px solid rgb(255, 221, 221);
+  border-right: none;
+}
+
+.list-fa-item.important {
+  border-radius: 0 3px 3px 0;
+  border: 2px solid rgb(156, 247, 156);
+  border-left: none;
+  background-color: rgb(156, 247, 156);
+}
+
+.list-fa-item.important:hover {
+  background-color: rgb(213, 253, 213);
+  border: 2px solid rgb(213, 253, 213);
+  border-left: none;
 }
