--- a/src/components/AppAddItemPanel/AppAddItemPanel.css
+++ b/src/components/AppAddItemPanel/AppAddItemPanel.css
@@ -1,58 +1,40 @@
-.app-search-panel {
-  width: 100%;
-  height: 40px;
+.app-add-item-panel {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
+  height: 40px;
+  padding: 10px;
   border: 1px solid #eee;
   border-radius: 3px;
-  padding: 0 10px;
-  margin-top: 5px;
 }
 
-.group-button {
-  width: 150px;
-}
-
-.input-search {
-  width: calc(100% - 155px);
-  height: 30px;
+.input-forn-add-item {
   text-indent: 12px;
-  border: 2px solid #eee;
+  width: calc(100% - 100px);
+  height: 30px;
   border-radius: 3px;
+  border: 2px solid #eee;
   outline: none;
 }
 
-.input-search:focus {
+.input-forn-add-item:focus {
   border: 2px solid rgb(86, 135, 226);
 }
 
-.btn {
+.btn-forn-add-item {
   cursor: pointer;
-  width: 50px;
+  width: 95px;
   height: 30px;
   border: 2px solid rgb(86, 135, 226);
   color: #fff;
+  border-radius: 3px;
   background-color: rgb(86, 135, 226);
   transition: background-color 0.2s linear, color 0.2s linear,
     border 0.2s linear;
 }
 
-.btn:hover {
+.btn-forn-add-item:hover {
   background-color: rgb(83, 122, 207);
   border: 2px solid rgb(83, 122, 207);
-}
-
-.btn-all {
-  border-radius: 3px 0 0 3px;
-}
-
-.btn-done {
-  border-radius: 0 3px 3px 0;
-}
-
-.btn.active {
-  background-color: #fff;
-  border: 2px solid rgb(86, 135, 226);
-  color: rgb(86, 135, 226);
 }
