--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -9,13 +9,12 @@
 body {
   display: flex;
   justify-content: center;
-  align-items: center;
-  overflow-x: hidden;
-  overflow-y: auto;
+  align-items: flex-start;
   width: 100%;
   height: 100vh;
 }
 
 .container {
   width: 350px;
+  margin: 30px 0;
 }
