--- a/src/components/AppTodoList/AppTodoList.css
+++ b/src/components/AppTodoList/AppTodoList.css
@@ -12,11 +12,27 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-direction: column;
   width: 100%;
   border-radius: 3px;
   border: 1px solid #eee;
   padding: 10px;
   margin-bottom: 5px;
+}
+
+.box-front-item, .box-back-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 50px;
+}
+
+.box-back-item {
+  width: 100%;
+  border: 1px solid #eee;
+  border-radius: 3px;
+  padding: 10px;
 }
 
 .item-label {
@@ -86,6 +102,16 @@
   border-right: none;
 }
 
+.list-fa-item.pencil {
+  background-color: rgb(248, 247, 171);
+  border: 2px solid rgb(248, 247, 171);
+}
+
+.list-fa-item.pencil:hover {
+  background-color: rgb(238, 238, 238);
+  border: 2px solid rgb(238, 238, 238);
+}
+
 .list-fa-item.important {
   border-radius: 0 3px 3px 0;
   border: 2px solid rgb(156, 247, 156);
@@ -97,4 +123,44 @@
   background-color: rgb(213, 253, 213);
   border: 2px solid rgb(213, 253, 213);
   border-left: none;
+}
+
+.list-fa-item.change {
+  border-radius: 0 3px 3px 0;
+  border: 2px solid rgb(156, 247, 156);
+  border-left: none;
+  background-color: rgb(156, 247, 156);
+}
+
+.list-fa-item.change:hover {
+  background-color: rgb(213, 253, 213);
+  border: 2px solid rgb(213, 253, 213);
+  border-left: none;
+}
+
+.list-fa-item.times {
+  border-radius: 3px 0 0 3px;
+  border: 2px solid rgb(253, 177, 177);
+  border-right: none;
+  background-color: rgb(253, 177, 177);
+}
+
+.list-fa-item.times:hover {
+  background-color: rgb(255, 221, 221);
+  border: 2px solid rgb(255, 221, 221);
+  border-right: none;
+}
+
+.input-change-text-item {
+  text-indent: 12px;
+  width: calc(100% - 75px);
+  height: 30px;
+  border: 2px solid #eee;
+  border-radius: 3px;
+  outline: none;
+  transition: border .2s linear;
+}
+
+.input-change-text-item:focus {
+  border: 2px solid rgb(86, 135, 226);
 }
