--- a/src/components/AppTodoList/AppTodoList.css
+++ b/src/components/AppTodoList/AppTodoList.css
@@ -164,3 +164,20 @@
 .input-change-text-item:focus {
   border: 2px solid rgb(86, 135, 226);
 }
+
+.alert {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+  height: 30px;
+  margin-top: 10px;
+  padding-left: 5px;
+  border-radius: 3px;
+  background-color: rgb(238, 238, 238);
+}
+
+.alert span {
+  padding-left: 7px;
+  font-size: 14px;
+}
